Fixed bottom spacing

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -199,7 +199,7 @@ form{
   max-width: 640px;
 
   margin: 0 0 0 25%;
-  padding: 0 0 10rem 0;
+  padding: 0 0 20rem 0;
 
   box-sizing: border-box;
   overflow: hidden;
